Fix z-index of API TOC

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -180,6 +180,8 @@ a img {
 #markdown-toc {
     border-bottom: 1px solid #ebecee;
     font-size: 12px;
+    position: relative;
+    z-index: 1;
 }
 
 #markdown-toc > ul > li {
